Update chat application
